[package]
name = "ngu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true
